# maslul

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
examples/: maslul.toml  quickstart.py
src/maslul/: __init__.py  cache.py  config.py  errors.py  router.py  types.py
src/maslul/providers/: __init__.py  _common.py  anthropic.py  base.py  gemini.py  grok.py  openai.py
tests/: fakes.py  test_cache.py  test_import_isolation.py  test_providers_unit.py  test_router.py  test_types.py
tests/integration/: test_providers_live.py
