[project]
name = "maslul"
version = "0.1.0"
description = "Async, fully-typed LLM router — one call across Anthropic, Gemini, and Grok, routed to the right model tier by difficulty."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ilia Tankelevich" }]
dependencies = []   # core is stdlib-only; provider SDKs land behind extras in M1

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maslul"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
