[project]
name = "maslul"
version = "0.2.1"
description = "Smart LLM router — one call, the right model."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ilia Tankelevich" }]
keywords = ["llm", "router", "anthropic", "claude", "gemini", "grok", "xai", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []   # core is stdlib-only; provider SDKs live behind the extras below

[project.optional-dependencies]
anthropic = ["anthropic>=0.109.1"]
gemini = ["google-genai>=2.8.0"]
grok = ["xai-sdk>=1.0.0"]
openai = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/iliatankelevich/maslul"
Repository = "https://github.com/iliatankelevich/maslul"
Issues = "https://github.com/iliatankelevich/maslul/issues"
Changelog = "https://github.com/iliatankelevich/maslul/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maslul"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/assets"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
